fix the overflowing flex

--- a/public/stylesheets/scss/style.scss
+++ b/public/stylesheets/scss/style.scss
@@ -8,7 +8,7 @@
     padding: 15px;
     padding-left: 30px;
     display: inline-block;
-    width: 35em;
+    width: 27em;
     height: 400px;
     border-left: 1px groove rgba(128, 128, 128, 0.7);
 }
